[Suraj]: Update the api-gateway service